--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!-- Header area -->
         <header id="header">
-            <img src="assets/images/Pagina 1-01.jpg" alt="portada">
+            <img src="assets/images/Pagina 1-01.png" alt="portada">
             <div class="bottom">
                 <a data-scroll href="#navigation" class="scrollDown animated pulse" id="scrollToContent"><i class="pe-7s-angle-down-circle pe-va"></i></a>
             </div>
@@ -57,7 +57,7 @@
 
         <section id="portfolio" class="portfolio-area">
             <div class="container">
-                <img src="assets/images/Pagina 2-01.jpg" alt="intro">
+                <img src="assets/images/Pagina 2-01.png" alt="intro">
             </div><!-- container -->
         </section><!-- portfolio -->
        
@@ -73,33 +73,27 @@
                                 <button class="accordion" id="boga"></button>
                                 <div class="panel" id="color">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Color 1)-01.jpg" alt="color1">
+                                        <img src="assets/images/Pagina 3 (Color 1)-01.png" alt="color1">
                                     </figure>
-                                    <div class="panel" id="color">
-                                        <figure>
-                                            <img src="assets/images/Pagina 3 (Color 2)-01.jpg" alt="color2">
-                                        </figure>
-                                    </div>
+                                    <figure>
+                                        <img src="assets/images/Pagina 3 (Color 2)-01.png" alt="color2">
+                                    </figure>
                                 </div>
                             </div>
                             <div>
                                 <button class="accordion" id="jaula"></button>
                                 <div class="panel" id="estructura">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Estructura 1)-01.jpg" alt="estruct1">
+                                        <img src="assets/images/Pagina 3 (Estructura 1)-01.png" alt="estruct1">
+                                        <img src="assets/images/Pagina 3 (Estructura 2)-01.png" alt="estruct2">
                                     </figure>
-                                    <div class="panel" id="estructura">
-                                        <figure>
-                                            <img src="assets/images/Pagina 3 (Estructura 2)-01.jpg" alt="estruct2">
-                                        </figure>
-                                    </div>
                                 </div>
                             </div>
                             <div>
                                 <button class="accordion" id="fad"></button>
                                 <div class="panel" id="pag4">
                                     <figure>
-                                        <img src="assets/images/Pagina 4-01.jpg" alt="pagina 4">
+                                        <img src="assets/images/Pagina 4-01.png" alt="pagina 4">
                                     </figure>
                                 </div>
                             </div>
@@ -107,11 +101,11 @@
                                 <button class="accordion" id="pieza"></button>
                                 <div class="panel" id="simplif">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Simplificación 1)-01.jpg" alt="simpl1">
+                                        <img src="assets/images/Pagina 3 (Simplificación 1)-01.png" alt="simpl1">
                                     </figure>
                                     <div class="panel" id="simplif">
                                         <figure>
-                                            <img src="assets/images/Pagina 3 (Simplificación 2)-01.jpg" alt="simpl2">
+                                            <img src="assets/images/Pagina 3 (Simplificación 2)-01.png" alt="simpl2">
                                         </figure>
                                     </div>
                                 </div>
@@ -120,11 +114,11 @@
                                 <button class="accordion" id="bauhaus"></button>
                                 <div class="panel" id="trama">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Trama 1)-01.jpg" alt="trama1">
+                                        <img src="assets/images/Pagina 3 (Trama 1)-01.png" alt="trama1">
                                     </figure>
                                     <div class="panel" id="trama">
                                         <figure>
-                                            <img src="assets/images/Pagina 3 (Trama 2)-01.jpg" alt="trama2">
+                                            <img src="assets/images/Pagina 3 (Trama 2)-01.png" alt="trama2">
                                         </figure>
                                     </div>
                                 </div>
