--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                                 <button class="accordion" id="boga"></button>
                                 <div class="panel" id="color">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Color 1)-01.png" alt="color1">
+                                        <img src="assets/images/Pagina 3 Color 1-01.png" alt="color1">
                                     </figure>
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Color 2)-01.png" alt="color2">
+                                        <img src="assets/images/Pagina 3 Color 2-01.png" alt="color2">
                                     </figure>
                                 </div>
                             </div>
@@ -84,8 +84,8 @@
                                 <button class="accordion" id="jaula"></button>
                                 <div class="panel" id="estructura">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Estructura 1)-01.png" alt="estruct1">
-                                        <img src="assets/images/Pagina 3 (Estructura 2)-01.png" alt="estruct2">
+                                        <img src="assets/images/Pagina 3 Estructura 1-01.png" alt="estruct1">
+                                        <img src="assets/images/Pagina 3 Estructura 2-01.png" alt="estruct2">
                                     </figure>
                                 </div>
                             </div>
@@ -101,11 +101,11 @@
                                 <button class="accordion" id="pieza"></button>
                                 <div class="panel" id="simplif">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Simplificación 1)-01.png" alt="simpl1">
+                                        <img src="assets/images/Pagina 3 Simplificación 1-01.png" alt="simpl1">
                                     </figure>
                                     <div class="panel" id="simplif">
                                         <figure>
-                                            <img src="assets/images/Pagina 3 (Simplificación 2)-01.png" alt="simpl2">
+                                            <img src="assets/images/Pagina 3 Simplificación 2-01.png" alt="simpl2">
                                         </figure>
                                     </div>
                                 </div>
@@ -114,11 +114,11 @@
                                 <button class="accordion" id="bauhaus"></button>
                                 <div class="panel" id="trama">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 (Trama 1)-01.png" alt="trama1">
+                                        <img src="assets/images/Pagina 3 Trama 1-01.png" alt="trama1">
                                     </figure>
                                     <div class="panel" id="trama">
                                         <figure>
-                                            <img src="assets/images/Pagina 3 (Trama 2)-01.png" alt="trama2">
+                                            <img src="assets/images/Pagina 3 Trama 2-01.png" alt="trama2">
                                         </figure>
                                     </div>
                                 </div>
