--- a/index.html
+++ b/index.html
@@ -97,15 +97,13 @@
                                 <button class="accordion" id="pieza"></button>
                                 <div class="panel" id="simplif">
                                     <figure>
-                                        <img src="assets/images/Pagina 3 Simplificación 1-01.png" alt="simpl1">
+                                        <img src="assets/images/Pagina 3 Simpl 1-01.png" alt="simpl1">
                                     </figure>
-                                    <div class="panel" id="simplif">
-                                        <figure>
-                                            <img src="assets/images/Pagina 3 Simplificación 2-01.png" alt="simpl2">
-                                        </figure>
-                                    </div>
+                                    <figure>
+                                        <img src="assets/images/Pagina 3 Simpl-01.png" alt="simpl2">
+                                    </figure>
                                 </div>
-                            </div>
+                                </div>
                             <div>
                                 <button class="accordion" id="bauhaus"></button>
                                 <div class="panel" id="trama">
