--- a/index.html
+++ b/index.html
@@ -129,10 +129,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <p class="copyright">© Copyright 2014 <a href="#" target="_blank">Your Website Link</a></p>
-                    </div>
-                    <div class="col-sm-6">
-                        <p class="designed">Theme by <a href="http://themewagon.com" target="_blank">Themewagon</a></p>
+                        <p class="copyright">© Copyright 2019 <a href="#" target="_blank">Santiago Urigüen</a></p>
                     </div>
                 </div>
             </div>
