--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
 
         <section id="portfolio" class="portfolio-area">
             <div class="container">
-                <img src="assets/images/Pagina 1-01.png" alt="intro">
+                <img src="assets/images/Inicio 1.png" alt="intro">
             </div>
             <div class="container">
-                <img src="assets/images/Pagina 2-01.png" alt="intro">
+                <img src="assets/images/Inicio 2.png" alt="intro">
+            </div>
+            <div class="container">
+                <img src="assets/images/Inicio 3.png" alt="intro">
             </div><!-- container -->
         </section><!-- portfolio -->
        
