--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <footer>
             <div class="container">
-                <div class="row">
+                <div class="row2">
                     <div class="col-sm-6">
                         <p class="copyright">© Copyright 2019 <a href="#" target="_blank">Santiago Urigüen</a></p>
                     </div>
